Fix TE table generation